--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
 <script src="script.js/bibleApp_localStorage_indexedDB.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_verseNotes.js" charset="utf-8"></script>
 <script>
-  window.onload = function() {
     tool_tip.click();
-    show_eng_superscript.click();
-  }
+  // window.onload = function() {
+  //   show_eng_superscript.click();
+  // }
 </script>
 
 </html>
