--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>LC BibleApp-02</title>
   <meta charset="utf-8" name="viewport" content= "width=device-width, initial-scale=1.0">
-  <script src="https://cdn.ckeditor.com/4.20.0/standard-all/ckeditor.js"></script>
+  <!-- <script src="https://cdn.ckeditor.com/4.20.0/standard-all/ckeditor.js"></script> -->
   <!-- <script src="/ckeditor/ckeditor.js"></script> -->
 <style id="verse_alignement">
     .verse {
@@ -28,6 +28,9 @@
     </div>
   </div>
   <div id="pagemaster">
+
+    <!-- TOP HORIZONTAL BAR -->
+    <div id="top_horizontal_bar">
     <div class="buttons">
       <button onclick="toggleNav()" class="togglenav" id="togglenavbtn" title="Toggle Nav">&#9776;</button>
       <!-- <button onclick="showStrongs(this)" class="showing" title="Show Strongs"><b>s+</b><button onclick="showTransliteration()" id="translit"class="translit" title="Transliteration"><b>T</b></button> -->
@@ -37,16 +40,41 @@
         <div id="refdiv">
           <input class="footersection" id="reference" title="Type Bible Reference"
             placeholder="Type Bible Reference"></input><button onclick="gotoRef()" class="footersection"
-            id="forreference" title="go to reference">...</button>
+            id="forreference" title="go to reference"><img src="images/scroll-svgrepo-com.svg"></button>
         </div>
         <div id="searchdiv">
-          <input class="footersection" id="wordsearch" title="What to search for"
-            placeholder="Type Words to Search For"></input><button onclick="runWordSearch()" class="footersection"
-            id="forwordsearch" title="Run Search" disabled>...</button>
+          <button id="titlebar_show_searchsettings" onclick="toggleClassAndActiveButton(titlebarsearchparameters, 'slideup',this)"><img src="images/settings-gear-svgrepo-com.svg" alt="⚙"></button><input class="footersection" id="wordsearch" title="What to search for"
+            placeholder="Type Words to Search For"><button onclick="runWordSearch()" class="footersection"
+            id="forwordsearch" title="Run Search" disabled><img src="images/search-svgrepo-com (2).svg" alt="..."></button>
         </div>
         <div id="bibleversions_btns">
         </div>
+
       </div>
+    </div>
+    <div id="titlebarsearchparameters" class="slideup">
+      <button onclick="checkUncheck([case_sensitive,t_case_sensitive])"><input id="t_case_sensitive" name="t_case_sensitive" type="checkbox">Case Sensitivity</button><button onclick="checkUncheck([whole_word,t_whole_word])"><input type="checkbox" id="t_whole_word" name="t_whole_word" value="t_whole_word">Whole Words</button><button onclick="checkUncheck([search_phrase,t_search_phrase])"><input type="radio" id="t_search_phrase" name="t_phraseornot" value="t_search_phrase">All Words-Search for Phrase</button><button onclick="checkUncheck([search_all_words,t_search_all_words])"><input type="radio" id="t_search_all_words" name="t_phraseornot" value="t_search_all_words" checked>All Words-Not Phrase</button>
+
+      <select id="biblebooksgroup">
+        <option value="allbks" selected>ALL BOOKS</option>
+        <option value="ot">OT</option>
+        <optgroup label="Old Testament">
+          <option value="pentateuch">Pentateuch</option>
+          <option value="history">History</option>
+          <option value="wisdom">Wisdom</option>
+          <option value="majorProphets">Major Prophets</option>
+          <option value="minorProphets">Minor Prophets</option>
+        </optgroup>
+        <option value="nt">NT</option>
+        <optgroup label="Old Testament">
+          <option value="nt_narrative">Gospels</option>
+          <option value="pauline">Pauline</option>
+          <option value="generalEpistles">General Epistles</option>
+          <option value="revelation">Revelation</option>
+        </optgroup>
+        <option value="currentbk">Current Book</option>
+      </select>
+    </div>
     </div>
 
     <div id="mobilebuttons">
@@ -57,9 +85,10 @@
       <button onclick="showMobileBtns()" id="showmobilebtns">&#10094;</button>
     </div>
 
+    <!-- BIBLE REFERENCE SIDE BAR -->
     <nav id="refnav" class="slideout" style="display:block">
       <div class="refnav" name="settings" id="app_settings" multiple>
-        <button id="biblenavigation" class="active_button" onclick="hideRefNav(null, bible_nav)" title="Bible Navigation"><img src="images\books-stack-svgrepo-com.svg" alt="☰" ></button>
+        <button id="biblenavigation" onclick="hideRefNav(null, bible_nav)" title="Bible Navigation"><img src="images\books-stack-svgrepo-com.svg" alt="☰" ></button>
         <button id="bibles" onclick="hideRefNav(null, bible_versions)" title="Bible Versions">
           <!-- <img src="images\knowledge-base-svgrepo-com.svg" alt="&#128218;" > -->
           &#128218;</button>
@@ -69,7 +98,7 @@
         <button id="open_strongsdefinitionwindow" onclick="hideRefNav(null, strongsdefinitionwindow)" title="Show strongs definition window">Str</button>
         <button id="cachesettings" onclick="hideRefNav(null, bibleapp_cache)" title="cache settings"><img src="images\settings-svgrepo-com.svg" alt="&#9881;" ></button><!-- &#9881; 🛠-->
       </div>
-      <div id="bible_nav" class="refnav slidein">
+      <div id="bible_nav" class="refnav slideout">
         <div class="bible_nav" name="books" id="bible_books" multiple></div>
         <div class="bible_nav" name="chapters" id="bible_chapters" multiple></div>
         <div class="bible_nav" name="verses" id="bible_verses" multiple></div>
@@ -82,20 +111,14 @@
       <div id="searchPreviewWindowFixed" class="slideout">
         <div id="searchparameters" class="hidesearchparameters">
           <div>
-            <button id="hidesearchparameters"
-              onclick="hideSearchParameters([case_sensitive,search_phrase,search_all_words,whole_word])">&#9660;</button>
+            <button id="hidesearchparameters" onclick="hideSearchParameters([case_sensitive,search_phrase,search_all_words,whole_word])">&#9660;</button>
           </div>
-          <div id="searchparametertitlebar" class="settingssectionheadings"
-            onclick="hideSearchParameters([case_sensitive,search_phrase,search_all_words,whole_word])">Search Parameters
-          </div>
-          <input type="checkbox" id="case_sensitive" name="case_sensitive" value="case_sensitive"><label
-            for="case_sensitive">Case Sensitivity</label><br>
-          <input type="checkbox" id="whole_word" name="whole_word" value="whole_word"><label for="whole_word">Whole
-            Words</label><br>
-          <input type="radio" id="search_phrase" name="phraseornot" value="search_phrase"><label for="search_phrase">All
-            Words-Search for Phrase</label><br>
-          <input type="radio" id="search_all_words" name="phraseornot" value="search_all_words" checked><label
-            for="search_all_words">All Words-Not Phrase</label><br>
+          <div id="searchparametertitlebar" class="settingssectionheadings" onclick="hideSearchParameters([case_sensitive,search_phrase,search_all_words,whole_word])">Search Parameters</div>
+          
+          <button class="search_param_btns" onclick="checkUncheck([case_sensitive,t_case_sensitive])"><input type="checkbox" id="case_sensitive" name="case_sensitive" value="case_sensitive">Case Sensitivity</button>
+          <button class="search_param_btns" onclick="checkUncheck([whole_word,t_whole_word])"><input type="checkbox" id="whole_word" name="whole_word" value="whole_word">Whole Words</button>
+          <button class="search_param_btns" onclick="checkUncheck([search_phrase,t_search_phrase])"><input type="radio" id="search_phrase" name="phraseornot" value="search_phrase">All Words-Search for Phrase</button>
+          <button class="search_param_btns" onclick="checkUncheck([search_all_words,t_search_all_words])"><input type="radio" id="search_all_words" name="phraseornot" value="search_all_words" checked>All Words-Not Phrase</button>
 
           <span id="where2display">
             <input type="checkbox" id="searchresultdisplay" name="searchresultdisplay" value="searchresultdisplay"
