--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
           <option value="allbks" selected>ALL BOOKS</option>
           <option value="ot">OT</option>
           <optgroup label="Old Testament">
-            <option value="pentateuch">Pentateuch</option>
-            <option value="history">History</option>
-            <option value="wisdom">Wisdom</option>
-            <option value="majorProphets">Major Prophets</option>
-            <option value="minorProphets">Minor Prophets</option>
+            <option value="pentateuch">Pentateuch [Gen-Deut]</option>
+            <option value="history">History [Jos-Est]</option>
+            <option value="wisdom">Wisdom [Job-SOS]</option>
+            <option value="majorProphets">Major Prophets [Isa-Dan]</option>
+            <option value="minorProphets">Minor Prophets [Hos-Mal]</option>
           </optgroup>
           <option value="nt">NT</option>
-          <optgroup label="Old Testament">
-            <option value="nt_narrative">Gospels</option>
-            <option value="pauline">Pauline</option>
-            <option value="generalEpistles">General Epistles</option>
-            <option value="revelation">Revelation</option>
+          <optgroup label="New Testament">
+            <option value="nt_narrative">Gospels [Mat-Act]</option>
+            <option value="pauline">Pauline [Rom-Heb]</option>
+            <option value="generalEpistles">General Epistles [Jam-Jud]</option>
+            <option value="revelation">Revelation [Rev]</option>
           </optgroup>
           <option value="currentbk">Current Book</option>
           <select></select>
@@ -280,8 +280,8 @@
 <script src="script.js/bibleApp_ref_browserHistory.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_versionHighlight.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_localStorage_indexedDB.js" charset="utf-8"></script>
-<script src="script.js/bibleApp_verseNotes.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_saveComments.js" charset="utf-8"></script>
+<script src="script.js/bibleApp_verseNotes.js" charset="utf-8"></script>
 <!-- <script src="script.js/bibleApp_createDownloadFile.js" charset="utf-8"></script> -->
 <script>
     tool_tip.click();
