--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
                 <button id="tool_tip" title="Tool Tip" class="active_button"><input type="checkbox" id="ttip_check" name="ttip_check" value="ttip_check" checked>Tt</button>
               </td>
             </tr>
+            <tr>
+              <td>Highlight Hovered Version</td>
+              <td>
+                <button id="hl_hoveredversion" title="highlight hovered version" class="active_button"><input type="checkbox" id="hl_hversion_check" name="hl_hversion_check" value="hl_hversion_check">HLHV</button>
+              </td>
+            </tr>
           </table>
         </div>
         <div class="settingssectionheadings">Change Font</div>
