--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
 <script src="script.js/bibleApp_localStorage_indexedDB.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_saveComments.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_verseNotes.js" charset="utf-8"></script>
+<script src="script.js/bibleApp_newWindow.js" charset="utf-8"></script>
 <!-- <script src="script.js/bibleApp_createDownloadFile.js" charset="utf-8"></script> -->
 <script>
     tool_tip.click();
