Working on dark mode

--- a/index.html
+++ b/index.html
@@ -206,16 +206,18 @@
             </tr>
           </table>
         </div>
-        <div class="settingssectionheadings">Modify Cache</div>
-        <input type="checkbox" id="cache_strongs" name="cache_strongs" value="cache_strongs"><label for="cache_strongs"
-          title="Clear transliterated words cache">Forget Transliterated Words</label><br>
-        <input type="checkbox" id="cache_higlights" name="cache_higlights" value="cache_higlights"><label
-          for="cache_higlights" title="Clear highlighted words cache">Forget Highlited Words</label>
+        
         <div class="settingssectionheadings">DARK/LIGHT MODE</div>
         <div for="darkmodebtn"><button id="darkmodebtn" onclick="darkLightMode()">L</button>Toggle Dark/Light Mode: </div>
         <div for="hidestrongshighlight" ><button id="hidestrongshighlight" onclick="hide_strongshighlight()">hl</button>Hide/Show Highlights: </div>
         <br>
         <div><input type="color" style="width: 100px;height: 25px;padding:0;border:0"></input></div>
+        
+        <!-- <div class="settingssectionheadings">Modify Cache</div>
+        <input type="checkbox" id="cache_strongs" name="cache_strongs" value="cache_strongs"><label for="cache_strongs"
+          title="Clear transliterated words cache">Forget Transliterated Words</label><br>
+        <input type="checkbox" id="cache_higlights" name="cache_higlights" value="cache_higlights"><label
+          for="cache_higlights" title="Clear highlighted words cache">Forget Highlited Words</label> -->
       </div>
       <div id="strongsdefinitionwindow" class="slideout">
       </div>
