--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>LC BibleApp-02</title>
+  <link rel="shortcut icon" href="images/favicon.ico">
   <meta charset="utf-8" name="viewport" content= "width=device-width, initial-scale=1.0">
   <script src="https://cdn.ckeditor.com/4.20.0/standard-all/ckeditor.js"></script>
   <!-- <script src="/ckeditor/ckeditor.js"></script> -->
