--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,10 @@
     <!-- <link rel="stylesheet" href="bibleApp.css"> -->
     <title>Page 2</title>
 <style>
-    body {font-size: 2em;}
+    body {
+        font-size: 2em;
+        background-color: whitesmoke;
+    }
 </style>
 </head>
 
