NIV'84 & NET Psalms Titles

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </button>
         <button id="open_strongsdefinitionwindow" onclick="hideRefNav(null, strongsdefinitionwindow)" title="Show strongs definition window">Str</button>
         <button id="cachesettings" onclick="hideRefNav(null, bibleapp_cache)" title="cache settings"><img src="images\settings-svgrepo-com.svg" alt="&#9881;" ></button><!-- &#9881; 🛠-->
-        <button id="sitehome"><a href="https://lightcityteachingfellowship.github.io/BibleStudies/" title="Site Home"><img src="images\fireplace-home-svgrepo-com.svg" alt="Site Home"></a></button>
+        <button id="sitehome"><a href="https://lightcityteachingfellowship.github.io/BibleStudies/" title="Site Home" target="_blank"><img src="images\fireplace-home-svgrepo-com.svg" alt="Site Home"></a></button>
       </div>
       <div id="bible_nav" class="slideout">
         <div class="bible_nav" name="books" id="bible_books" multiple></div>
