--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>LC BibleApp-02</title>
+  <title>LC BibleApp</title>
   <link rel="shortcut icon" href="images/favicon.ico">
   <meta charset="utf-8" name="viewport" content= "width=device-width, initial-scale=1.0">
   <script src="https://cdn.ckeditor.com/4.20.0/standard-all/ckeditor.js"></script>
-  <!-- <script src="/ckeditor/ckeditor.js"></script> -->
+  <!-- <script src="ckeditor/ckeditor.js"></script> -->
 <style id="verse_alignement">
     .verse {
       display: block;
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="bibleApp-2.css">
 </head>
 
-<body>
+<body id="homepage">
   <div id="pagemaster">
 
     <!-- TOP HORIZONTAL BAR -->
@@ -26,7 +26,7 @@
           <button onclick="toggleNav()" class="togglenav" id="togglenavbtn" title="Toggle Nav"></button>
           <div id="ref_search_versions_holder">
             <div id="refdiv">
-              <input class="footersection" id="reference" title="Type Bible Reference"
+              <input class="footersection reference homepage" id="reference" title="Type Bible Reference"
                 placeholder="Type Bible Reference"></input><button onclick="gotoRef()" class="footersection"
                 id="forreference" title="go to reference"><img src="images/scroll-svgrepo-com.svg"></button>
             </div>
@@ -240,7 +240,7 @@
       </div>
       <div id="ppp"></div>
         <!-- <div id="search_section">adfadfadsfasdfadsf</div> -->
-      </main>
+    </main>
   </div>
   <div id="searchresultwindow" class="displaynone">
     <div class="relative">
