--- a/index.html
+++ b/index.html
@@ -208,6 +208,15 @@
               <button class="increase_fontsize" onclick="changeFontSize('main_font','plus')">+</button>
               </td>
             </tr>
+            <tr>
+              <td>Reference & Search Topbar</td>
+              <td>
+                <button class="decrease_fontsize" onclick="changeFontSize('refnsrch','minus')">-</button>
+              </td>
+              <td>
+              <button class="increase_fontsize" onclick="changeFontSize('refnsrch','plus')">+</button>
+              </td>
+            </tr>
           </table>
         </div>
         
