img navbtn, home & css-Contextmenu,search&str

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- TOP HORIZONTAL BAR -->
     <div id="top_horizontal_bar">
         <div class="buttons" id="top_horizontal_bar_buttons">
-          <button onclick="toggleNav()" class="togglenav" id="togglenavbtn" title="Toggle Nav"></button>
+          <button onclick="toggleNav()" class="togglenav" id="togglenavbtn" title="Toggle Nav"><img src="images/hamburger-menu-svgrepo-com-thicker.svg" alt="☰"></button>
           <div id="ref_search_versions_holder">
             <div id="refdiv">
               <input class="footersection reference homepage" id="reference" title="Type Bible Reference"
@@ -79,7 +79,7 @@
         <button id="open_strongsdefinitionwindow" onclick="hideRefNav(null, strongsdefinitionwindow)" title="Show strongs definition window">Str</button>
         <button id="cachesettings" onclick="hideRefNav(null, bibleapp_cache)" title="general settings"><img src="images\settings-svgrepo-com.svg" alt="&#9881;" ></button><!-- &#9881; 🛠-->
         <button id="available_notes" onclick="appendAllRefsWithNote(), hideRefNav(null, bibleapp_available_notes)" title="Pastor Sam ElYah's Bible Notes"><img src="images\book-pencil-svgrepo-com.svg" alt="&#9881;" ></button><!-- &#9881; 🛠-->
-        <button id="sitehome"><a href="https://lightcityteachingfellowship.github.io/BibleStudies/" title="Site Home" target="_blank"><img src="images\fireplace-home-svgrepo-com.svg" alt="Site Home"></a></button>
+        <button id="sitehome"><a href="https://lightcityteachingfellowship.github.io/BibleStudies/" title="Site Home" target="_blank"><img src="images\home-svgrepo-com(maroon).svg" alt="Site Home"></a></button>
       </div>
       <div id="bible_nav" class="slideout">
         <div class="bible_nav" name="books" id="bible_books" multiple></div>
