--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <button id="searchsettings" onclick="hideRefNav(null, searchPreviewWindowFixed)" title="word(s) search"><img src="images\search-svgrepo-com(2).svg" alt="search"></button>
         </button>
         <button id="open_strongsdefinitionwindow" onclick="hideRefNav(null, strongsdefinitionwindow)" title="Show strongs definition window">Str</button>
-        <button id="cachesettings" onclick="hideRefNav(null, bibleapp_cache)" title="general settings"><img src="images\settings-svgrepo-com.svg" alt="&#9881;" ></button><!-- &#9881; 🛠-->
         <button id="available_notes" onclick="appendAllRefsWithNote(), hideRefNav(null, bibleapp_available_notes)" title="Pastor Sam ElYah's Bible Notes"><img src="images\book-pencil-svgrepo-com.svg" alt="&#9881;" ></button><!-- &#9881; 🛠-->
+        <button id="cachesettings" onclick="hideRefNav(null, bibleapp_cache)" title="general settings"><img src="images\settings-svgrepo-com.svg" alt="&#9881;" ></button><!-- &#9881; 🛠-->
         <button id="sitehome"><a href="https://lightcityteachingfellowship.github.io/BibleStudies/" title="Site Home" target="_blank"><img src="images\home-svgrepo-com(maroon).svg" alt="Site Home"></a></button>
       </div>
       <div id="bible_nav" class="slideout">
@@ -288,10 +288,12 @@
 <!-- <script src="pell-texteditor/pell.js"></script> -->
 <script src="data/bible.js"></script>
 <script src="script.js/helpers.js"></script>
+<script src="script.js/bibleApp_newWindow.js" charset="utf-8"></script>
 <!-- <script src="data/crossReferences.js" charset="utf-8"></script> -->
 <script src="data/bibleApp_reKeyedCrossReference.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_crossRefrencer.js" charset="utf-8"></script>
-<script src="script.js/bibleApp_contextMenu.js"></script>
+<script src="script.js/bibleApp_contextMenu_mainFunc.js"></script>
+<script src="script.js/bibleApp_contextMenu_mainPage.js"></script>
 <script src="script.js/bibleApp_versionsLoader.js"></script>
 <script src="script.js/bibleApp_generateScriptureReference.js"></script>
 <script src="script.js/bibleApp_transliteration.js" charset="utf-8"></script>
@@ -308,10 +310,9 @@
 <script src="script.js/bibleApp_ref_browserHistory.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_versionHighlight.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_localStorage_indexedDB.js" charset="utf-8"></script>
-<script src="script.js/bibleApp_saveComments.js" charset="utf-8"></script>
-<script src="script.js/bibleApp_verseNotes.js" charset="utf-8"></script>
-<script src="script.js/bibleApp_newWindow.js" charset="utf-8"></script>
+<script src="script.js/bibleApp_verseNotesSave.js" charset="utf-8"></script>
 <!-- <script src="script.js/bibleApp_createDownloadFile.js" charset="utf-8"></script> -->
+<script src="script.js/bibleApp_verseNotes.js" charset="utf-8"></script>
 <script>
     tool_tip.click();
   // window.onload = function() {
