--- a/page2_versenotes.html
+++ b/page2_versenotes.html
@@ -29,6 +29,7 @@
         </details>
     </div>
 </body>
+<script src="script.js/bibleApp.js" charset="utf-8"></script>
 <script src="data/bible.js"></script>
 <script src="script.js/helpers.js"></script>
 <script src="script.js/bibleApp_contextMenu_mainFunc.js"></script>
