--- a/index.html
+++ b/index.html
@@ -286,27 +286,27 @@
 </body>
 <!-- <script src="data/KJV.js"></script> -->
 <!-- <script src="pell-texteditor/pell.js"></script> -->
-<script src="data/bible.js"></script>
-<script src="script.js/helpers.js"></script>
-<script src="script.js/bibleApp_newWindow.js" charset="utf-8"></script>
 <!-- <script src="data/crossReferences.js" charset="utf-8"></script> -->
+<script src="script.js/bibleApp.js" charset="utf-8"></script>
+<script src="data/bible.js" charset="utf-8"></script>
+<!-- <script src="script.js/TSK.js" charset="utf-8"></script> -->
+<script src="data/crossReferences.js" charset="utf-8"></script>
+<script src="script.js/helpers.js" charset="utf-8"></script>
+<script src="script.js/bibleApp_newWindow.js" charset="utf-8"></script>
 <script src="data/bibleApp_reKeyedCrossReference.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_crossRefrencer.js" charset="utf-8"></script>
-<script src="script.js/bibleApp_contextMenu_mainFunc.js"></script>
-<script src="script.js/bibleApp_contextMenu_mainPage.js"></script>
-<script src="script.js/bibleApp_versionsLoader.js"></script>
-<script src="script.js/bibleApp_generateScriptureReference.js"></script>
+<script src="script.js/bibleApp_contextMenu_mainFunc.js" charset="utf-8"></script>
+<script src="script.js/bibleApp_contextMenu_mainPage.js" charset="utf-8"></script>
+<script src="script.js/bibleApp_versionsLoader.js" charset="utf-8"></script>
+<script src="script.js/bibleApp_generateScriptureReference.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_transliteration.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_transliteratorGreek.js" charset="utf-8"></script>
-<script src="script.js/bibleApp_refNav.js"></script>
+<script src="script.js/bibleApp_refNav.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_localStorage_cache.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_styles.js" charset="utf-8"></script>
-<script src="script.js/bibleApp.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_gotoRef_Func.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_search.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_chapterNameOnScroll.js" charset="utf-8"></script>
-<!-- <script src="script.js/TSK.js" charset="utf-8"></script> -->
-<script src="data/crossReferences.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_ref_browserHistory.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_versionHighlight.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_localStorage_indexedDB.js" charset="utf-8"></script>
