--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- TOP HORIZONTAL BAR -->
     <div id="top_horizontal_bar">
         <div class="buttons" id="top_horizontal_bar_buttons">
-          <button onclick="toggleNav()" class="togglenav" id="togglenavbtn" title="Toggle Nav"><img src="images/hamburger-menu-svgrepo-com.svg" alt="☰"></button>
+          <button onclick="toggleNav(null, refnav)" class="togglenav" id="togglenavbtn" title="Toggle Nav"><img src="images/hamburger-menu-svgrepo-com.svg" alt="☰"></button>
           <div id="ref_search_versions_holder">
             <div id="refdiv">
               <input class="footersection reference homepage" id="reference" title="Type Bible Reference"
@@ -255,7 +255,7 @@
         <!-- <div id="search_section">adfadfadsfasdfadsf</div> -->
     </main>
   </div>
-  <div id="searchresultwindow" class="displaynone">
+  <!-- <div id="searchresultwindow" class="displaynone">
     <div class="relative">
       <div id="searchboxtitlebar">
         <div id="searchrelative">
@@ -268,7 +268,7 @@
       <div id="searchPreview">
       </div>
     </div>
-  </div>
+  </div> -->
   <div id="singleverse_compare_menu" class="slideout"></div>
 
   <!-- <textarea name="verse_note" id="verse_note" cols="30" rows="10"></textarea> -->
