--- a/page2_versenotes.html
+++ b/page2_versenotes.html
@@ -37,8 +37,9 @@
     </div>
 </body>
 <script src="script.js/bibleApp.js" charset="utf-8"></script>
-<script src="data/bible.js"></script>
 <script src="script.js/helpers.js"></script>
+<script src="script.js/bibleApp_page2.js" charset="utf-8"></script>
+<script src="data/bible.js"></script>
 <script src="script.js/bibleApp_contextMenu_mainFunc.js"></script>
 <script src="script.js/bibleApp_contextMenu_notesPage.js"></script>
 <script src="script.js/bibleApp_transliteratorGreek.js" charset="utf-8"></script>
